--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Ambuj Jauhari, Software Developer
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Ambuj Jauhari!</h1>
 </div><!-- /.blurb -->
